сделал js для главной

--- a/app/components/header.html
+++ b/app/components/header.html
@@ -33,7 +33,7 @@
                         </div>
                         <div class="function-cart">
                             <img src="../images/icon-cart.svg" alt="cart">
-                            <div class="count-products"><span>2</span></div>
+                            <div class="count-products"><span>0</span></div>
                         </div>
                     </div>
                 </div>
@@ -92,21 +92,24 @@
                     </div>
                 </div>
                 <div class="header-products">
-                    <div class="header-product"><img src="../images/header-banner1-card1.png" alt="nike"></div>
-                    <div class="header-product"><img src="../images/header-banner1-card2.png" alt="nike"></div>
-                    <div class="header-product"><img src="../images/header-banner1-card3.png" alt="nike"></div>
+                    <div class="header-product" onclick="toggleImg('../images/header-banner2.png')"><img
+                            src="../images/header-banner1-card1.png" alt="nike"></div>
+                    <div class="header-product" onclick="toggleImg('../images/header-banner3.png')"><img
+                            src="../images/header-banner1-card2.png" alt="nike"></div>
+                    <div class="header-product" onclick="toggleImg('../images/header-banner4.png')"><img
+                            src="../images/header-banner1-card3.png" alt="nike"></div>
                 </div>
                 <h2>52 499 ₽</h2>
                 <a href="#" class="btn1">КУПИТЬ</a>
             </div>
             <div class="header-content-img">
                 <div class="header-banner">
-                    <img src="../images/header-banner1.png" alt="banner">
+                    <img class="mainImg" src="../images/header-banner1.png" alt="banner">
                 </div>
             </div>
         </div>
         <div class="header-toggle">
-            <img src="../images/icon-arrow-rounded.svg" alt="arrow">
+            <img class="move-toggle-slider" src="../images/icon-arrow-rounded.svg" alt="arrow">
         </div>
     </header>
 
@@ -185,85 +188,110 @@
                 <div class="collection-box-slider">
                     <div class="collection-box-slider-track">
                         <div class="slide">
-                            <div>
+                            <div class="slide-image-wrapper">
                                 <img src="../images/product1.jpg" alt="slide">
-                                <h6>Кроссовки Nike ACG Air Terra Antarktik Low</h6>
+                                <div class="add-to-cart-circle">
+                                    <p>+</p>
+                                </div>
                             </div>
+                            <h6>Кроссовки Nike ACG Air Terra Antarktik Low</h6>
                             <div class="slide-cost">
                                 <h5>5 999 ₽</h5>
                                 <h6>11 399 ₽</h6>
                             </div>
                         </div>
                         <div class="slide">
-                            <div>
+                            <div class="slide-image-wrapper">
                                 <img src="../images/product2.jpg" alt="slide">
-                                <h6>Кроссовки Nike Roshe Run</h6>
+                                <div class="add-to-cart-circle">
+                                    <p>+</p>
+                                </div>
                             </div>
+                            <h6>Кроссовки Nike Roshe Run</h6>
                             <div class="slide-cost">
                                 <h5>4 999 ₽</h5>
                                 <h6>7 399 ₽</h6>
                             </div>
                         </div>
                         <div class="slide">
-                            <div>
+                            <div class="slide-image-wrapper">
                                 <img src="../images/product3.jpg" alt="slide">
-                                <h6>Кроссовки Nike Air More Uptempo Low</h6>
+                                <div class="add-to-cart-circle">
+                                    <p>+</p>
+                                </div>
                             </div>
+                            <h6>Кроссовки Nike Air More Uptempo Low</h6>
                             <div class="slide-cost">
                                 <h5>6 999 ₽</h5>
                                 <h6>9 399 ₽</h6>
                             </div>
                         </div>
                         <div class="slide">
-                            <div>
+                            <div class="slide-image-wrapper">
                                 <img src="../images/product4.jpg" alt="slide">
-                                <h6>Кроссовки Nike Air Max Plus TN</h6>
+                                <div class="add-to-cart-circle">
+                                    <p>+</p>
+                                </div>
                             </div>
+                            <h6>Кроссовки Nike Air Max Plus TN</h6>
                             <div class="slide-cost">
                                 <h5>4 999 ₽</h5>
                                 <h6>6 399 ₽</h6>
                             </div>
                         </div>
                         <div class="slide">
-                            <div>
+                            <div class="slide-image-wrapper">
                                 <img src="../images/product5.jpg" alt="slide">
-                                <h6>Кроссовки Nike</h6>
+                                <div class="add-to-cart-circle">
+                                    <p>+</p>
+                                </div>
                             </div>
+                            <h6>Кроссовки Nike</h6>
                             <div class="slide-cost">
                                 <h5>3 999 ₽</h5>
                                 <h6>5 399 ₽</h6>
                             </div>
                         </div>
                         <div class="slide">
-                            <div>
+                            <div class="slide-image-wrapper">
                                 <img src="../images/product6.jpg" alt="slide">
-                                <h6>Кроссовки Nike Air Max Plus Drift</h6>
+                                <div class="add-to-cart-circle">
+                                    <p>+</p>
+                                </div>
                             </div>
+                            <h6>Кроссовки Nike Air Max Plus Drift</h6>
                             <div class="slide-cost">
                                 <h5>5 999 ₽</h5>
                                 <h6>9 399 ₽</h6>
                             </div>
                         </div>
                         <div class="slide">
-                            <div>
+                            <div class="slide-image-wrapper">
                                 <img src="../images/product7.jpg" alt="slide">
-                                <h6>Кроссовки Nike Air Max Plus Drift</h6>
+                                <div class="add-to-cart-circle">
+                                    <p>+</p>
+                                </div>
                             </div>
+                            <h6>Кроссовки Nike Air Max Plus Drift</h6>
                             <div class="slide-cost">
                                 <h5>8 999 ₽</h5>
                                 <h6>11 399 ₽</h6>
                             </div>
                         </div>
                         <div class="slide">
-                            <div>
+                            <div class="slide-image-wrapper">
                                 <img src="../images/product8.jpg" alt="slide">
-                                <h6>Кроссовки Nike Air Max Plus Drift</h6>
+                                <div class="add-to-cart-circle">
+                                    <p>+</p>
+                                </div>
                             </div>
+                            <h6>Кроссовки Nike Air Max Plus Drift</h6>
                             <div class="slide-cost">
                                 <h5>5 999 ₽</h5>
                                 <h6>11 399 ₽</h6>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
