добавил модальное окно

--- a/app/components/header.html
+++ b/app/components/header.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div class="modal-burger-menu ">
+        <h1>fsdfsdfsd</h1>
+    </div>
+
     <header>
         <div class="nav-container">
             <nav>
@@ -101,7 +105,7 @@
                             src="../images/header-banner1-card3.png" alt="nike"></div>
                 </div>
                 <h2>52 499 ₽</h2>
-                <a href="#" class="btn1">КУПИТЬ</a>
+                <a href="#" class="btn1" id="buy-nike-winterized">КУПИТЬ</a>
             </div>
             <div class="header-content-img">
                 <div class="header-banner">
