главная страница целиком готова

--- a/app/components/header.html
+++ b/app/components/header.html
@@ -10,7 +10,23 @@
 
 <body>
     <div class="modal-burger-menu ">
-        <h1>fsdfsdfsd</h1>
+        <img src="../images/icon-close-modal.svg" alt="close-modal" id="close-modal-burger">
+
+        <div class="burger-box">
+            <ul class="burger-link-menu">
+                <li class="animated-link"><a href="#aboutUs">О бренде</a></li>
+                <li class="animated-link"><a href="#catalog">Каталог</a></li>
+                <li class="animated-link"><a href="#subscribe">Подписка</a></li>
+                <li class="animated-link"><a href="#reviews">Отзывы</a></li>
+                <li class="animated-link"><a href="#contacts">Контакты</a></li>
+            </ul>
+            <ul class="burger-social-media">
+                <li><a href="https://www.instagram.com"><img src="../images/icon-instagram.svg" alt="instagram"></a>
+                </li>
+                <li><a href="https://ok.ru/"><img src="../images/icon-ok.svg" alt="ok"></a></li>
+                <li><a href="https://vk.com/"><img src="../images/icon-vk.svg" alt="vk"></a></li>
+            </ul>
+        </div>
     </div>
 
     <header>
