--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -822,11 +822,40 @@ footer {
   z-index: 200;
   height: 100vh;
   width: 100%;
-  background-color: rgba($color: #ffffff, $alpha: 0.9);
+  background-color: rgba($color: #ffffff, $alpha: 0.95);
 }
 
 .open-modal{
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#close-modal-burger{
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  cursor: pointer;
+}
+.burger-box{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 35px;
+}
+
+.burger-link-menu{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 35px;
+}
+.burger-social-media{
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 1670px) {
